--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -11,6 +11,18 @@
   max-width: 600px;
 }
 
+.app-container.dark-mode .account-setting-container{
+  background-color:rgb(39, 42, 85) ;
+  color: white;
+}
+
+.app-container.dark-mode .account-setting-container label{
+  color: white;
+}
+.app-container.dark-mode .account-setting-container .avatar-image{
+  border: 10px solid rgb(90, 88, 113);
+}
+
 .account-setting-wrapper {
   width: 100%;
   height: 100%;
